# Nova

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/Nova/Asset/: AssetHandle.hpp  AssetManager.hpp  Assets.hpp  Shader.hpp  Texture.hpp
include/Nova/Audio/: Music.hpp  Sound.hpp
include/Nova/Core/: App.hpp  Assert.hpp  AssetManager.hpp  EntryPoint.hpp  Input.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  Window.hpp  WindowConfig.hpp
include/Nova/ECS/: Components.hpp  Entity.hpp  RendererSystem.hpp  SpriteSystem.hpp  System.hpp
include/Nova/Misc/: Assert.hpp  Color.hpp  Easings.hpp  Logger.hpp  Metrics.hpp  StringHash.hpp
include/Nova/Renderer/: GLError.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  VertexArray.hpp
include/Nova/Scene/: Components.hpp  Entity.hpp  RendererSystem.hpp  Scene.hpp  SceneManager.hpp
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/Asset/: AssetManager.cpp  Shader.cpp  Texture.cpp
src/Audio/: Music.cpp  Sound.cpp
src/Core/: App.cpp  AssetManager.cpp  Input.cpp  Renderer.cpp  SceneManager.cpp  Window.cpp
src/ECS/: Entity.cpp  RendererSystem.cpp  SpriteSystem.cpp  System.cpp
src/Misc/: Easings.cpp  GLError.cpp  Metrics.cpp
src/Renderer/: GLError.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VertexArray.cpp
src/Scene/: Entity.cpp  RendererSystem.cpp  Scene.cpp  SceneManager.cpp  System.cpp
